wasm/filter_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_46t6o3u0/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/6cd3b37eb8f73903343dc6a0ff19e2131274b241.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/6cd3b37eb8f73903343dc6a0ff19e2131274b241.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/7f06a06d270041d4a9b25499a3944bb8d002c285.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/7f06a06d270041d4a9b25499a3944bb8d002c285.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/966d3cb3d7dbbcb3513cf293c9f533b17c4f04c0.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/966d3cb3d7dbbcb3513cf293c9f533b17c4f04c0.json" for subsequent builds)
cache:INFO:  - ok
